# rai

./: README.md
keycloak/: README.md  docker-compose.yaml
provisioning/: README.md  package-lock.json  package.json  readme.md
provisioning/src/: command_center.js
tenant_client/: README.md  app.json  config.js  package-lock.json  package.json
tenant_client/app/: AdminSetupScreen.tsx  LoginScreen.tsx  _layout.tsx
tenant_client/app/(tabs)/: ChatScreen.tsx  _layout.tsx  index.tsx
tenant_client/components/: ActionCancelModal.tsx  AuthWrapper.tsx  CreateChatOptionsPanel.tsx  HeaderBar.tsx  InviteEmployee.tsx  LanguagePicker.tsx  MessageInput.tsx  RawMessage.tsx  ShareChatModal.tsx  SignOutButton.tsx  types.d.ts
tenant_client/constants/: AuthManager.ts  authConfig.ts  storage.js
tenant_client/hooks/: useAuth.tsx
tenant_server/: docker-compose.yaml  keycloak-client.mjs  package-lock.json  package.json  pyproject.toml  server.js  translate_server.py
